# slambox-ros2

./: .ducker.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.github/workflows/: docker-build-test.yml
config/: client.yaml  slambox_rviz2.rviz
docker/: Dockerfile  Dockerfile.aarch64
include/applications/: driver_client.hpp
include/utils/: ros_msg_converter.hpp  string_utils.hpp
launch/: slambox_ros_client_launch.py
src/: node_client.cpp
src/applications/: driver_client.cpp
src/utils/: ros_msg_converter.cpp
tests/: test_msg_converter.cpp
